; ModuleID = '/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_float8.c_gbt_float8_dist.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_float8.c_gbt_float8_dist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*, i32*)* @gbt_float8_dist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @gbt_float8_dist(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to i64*
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %7, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to i64*
  %15 = load i64, i64* %14, align 8
  store i64 %15, i64* %8, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %8, align 8
  %18 = sub nsw i64 %16, %17
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i64 @isinf(i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %27, label %23

23:                                               ; preds = %3
  %24 = load i64, i64* %8, align 8
  %25 = call i64 @isinf(i64 %24)
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %23, %3
  %28 = phi i1 [ true, %3 ], [ %26, %23 ]
  %29 = zext i1 %28 to i32
  %30 = call i32 @CHECKFLOATVAL(i64 %19, i32 %29, i32 1)
  %31 = load i64, i64* %9, align 8
  %32 = call i64 @Abs(i64 %31)
  ret i64 %32
}

declare dso_local i32 @CHECKFLOATVAL(i64, i32, i32) #1

declare dso_local i64 @isinf(i64) #1

declare dso_local i64 @Abs(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
